Update Swagger documentation for Transactions
